unpackaged/main/default/objects/Distribution_Skill__c/Distribution_Skill__c.object-meta.xml
<CustomObject>
    <description>Relates a Distribution User to a Distribution Routing Definition</description>
    <label>Distribution Skill</label>
    <nameField>
        <displayFormat>DistributionSkill-{000000}</displayFormat>
        <label>Distribution Skill Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distribution Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>