unpackaged/main/default/objects/Distribution_Skill__c/fields/Distribution_Routing_Definition__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Routing_Definition__c</fullName>
    <label>Distribution Routing Definition</label>
    <referenceTo>Distribution_Routing_Definition__c</referenceTo>
    <relationshipLabel>Distribution Skills</relationshipLabel>
    <relationshipName>Distribution_Skills</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>