unpackaged/main/default/objects/Distribution_Skill__c/fields/Distribution_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Sort_Order__c</fullName>
    <description>sort order for record distribution, updated manually or by schedule flow (PD-550)</description>
    <inlineHelpText>sort order for record distribution</inlineHelpText>
    <label>Distribution Sort Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>