unpackaged/main/default/objects/Distribution_Skill__c/fields/Distribution_User__c.field-meta.xml
<CustomField>
    <fullName>Distribution_User__c</fullName>
    <label>Distribution User</label>
    <referenceTo>Distribution_User__c</referenceTo>
    <relationshipLabel>Distribution Skills</relationshipLabel>
    <relationshipName>Distribution_Skills</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>